--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                        <li><a class="portfolio " href="#portfolio">Portfolio</a></li>
                                        <li><a class="team" href="#team">Team</a></li>
                                        <li><a href="#blog">Blog</a></li>
-                                       <li class="dropdown"><a href="#"><span>Drop Down</span> </a>
+                                       <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> </a>
                                  <ul>
                                     <li><a class="nav-link scrollto" href="#">Drop Down 1</a></li>
                                     <li class="dropdown"><a href="#"><span>Deep Drop Down</span> </a>
@@ -59,7 +59,7 @@
                                  <li><a href="#">Drop Down 3</a></li>
                                  <li><a href="#">Drop Down 4</a></li>
                             </ul>
-                          </li>
+                          </li> -->
                        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                    </ul>
                 <a href="#about" class="get-started-btn scrollto text-center"> &nbsp;&nbspGet Started</a>
